grammar.js
        source_file: $ => repeat($._stm),

        _stm: $ => choice(
            $._expression_stm,
            $._declaration_stm
        ),

        type_item: $ => seq(
            optional($.privacy_visibility),
            'type',
            field('name', $._type_identifier),
            field('type parameters', optional($.type_parameters)),
            optional($.where_clause),
            '=',
            field('type', $._type),
            ';'
        ),

        function_item: $ => seq(
            optional($.privacy_visibility),
            optional($.function_qualifiers),
            'fn',
            field('name', choice($.identifier, $.metavariable)),
            field('type parameters', optional($.type_parameters)),
            field('parameters', $.parameters),
            optional(seq('->', field('return', $._type))),
            optional($.where_clause),
            field('body', $.block)
        ),

        function_qualifiers: $ => repeat1(choice(
            'async',
            'const',
            'unsafe',
            'default',
            $.extern_modifier
        )),

        parameters: $ => seq(
            '(',
            optional(sepRepInstru(',', seq(
                optional($.outer_attribute_item),
                choice(
                    $.parameter,
                    $.self_parameter,
                    '...',
                    '_',
                    $._type
                )
            ))),
            optional(','),
            ')'
        ),

        parameter: $ => seq(
            optional($.mutable_spec),
            field('pattern', choice(
                $._pattern,
                $.self,
                $._reserved_identifier
            )),
            ':',
            field('type', $._type)
        ),

        extern_modifier: $ => seq(
            'extern',
            optional($.string_lit)
        ),

        _type: $ => choice(
            $.abstract_type,                // abstract type
            $.reference_pointer_type,       // reference type
            $.raw_pointer_type,             // pointer type
            $.array_type,                    // array type
            $.function_type,                 // function type
            $.dynamic_type,                 // dynamic type
            $.bounded_type,                 // bounded type
            $.metavariable,
            $._type_identifier,
            $.never_type,
            $.tuple_type,
            $.unit_type,
            $.macro_invoc,
            $.generic_type,
            $.scoped_type_identifier,
            alias(choice(...data_types), $.prim_data_type)
        ),

        bracket_type: $ => seq(
            '<',
            choice(
                $._type,
                $.qualified_type
            ),
            '>'
        ),

        qualified_type: $ => seq(
            field('type', $._type), 'as', field('alias', $._type)
        ),

        lifetime: $ => seq('"', $.identifier),

        array_type: $ => seq(
            '[',
            field('type', $._type),
            optional(seq(
                ';', field('size', $._expression)
            )),
            ']'
        ),

        for_lifetime: $ => seq(
            'for', '<',
            sepRepInstru(',', $.lifetime),
            optional(','),
            '>'
        ),

        function_type: $ => seq(
            optional($.for_lifetime),
            prec(14, seq(
                choice(
                    field('trait', choice(
                        $._type_identifier,
                        $.scoped_type_identifier
                    )),
                    seq(
                        optional($.function_qualifiers),
                        'fn'
                    )
                ),
                field('parameters', $.parameters)
            )),
            optional(seq('->', field('return_type', $._type)))
        ),

        tuple_type: $ => seq(
            '(',
            sepRepInstru(',', $._type),
            optional(','),
            ')'
        ),

        unit_type: $ => seq('(', ')'),

        generic_type: $ => prec(1, seq(
            field('type', choice(
                $._type_identifier,
                $.scoped_type_identifier
            )),
            field('type arguments', $.type_args)
        )),

        bounded_type: $ => prec.left(-1, choice(
            seq($.lifetime, '+', $._type),
            seq($._type, '+', $.lifetime),
            seq($._type, '+', $._type)
        )),

        type_args: $ => seq(
            token(prec(1, '<')),
            sepRepInstru(',', choice(
                $._type,
                $.lifetime,
                $._literal,
                $.bind_type,
                $.block         // block
            )),
            optional(','),
            '>'
        ),

        bind_type: $ => seq(
            field('name', $._type_identifier),
            '=',
            field('type', $._type)
        ),

        dynamic_type: $ => seq(
            'dyn',
            field('trait', choice(
                $._type_identifier,
                $.scoped_type_identifier,
                $.function_type, // function type
                $.generic_type
            ))
        ),

        _expression: $ => choice(
            $._literal, 
            $.return_expression, 
            $.call_expression,  
            $.type_cast_expression, 
            $.range_expression,  
            $.assignment_expression,  
            $.binary_expression,  
            $.question_mark_expression, 
            $.reference_expression, 
            $.unary_expression,     
            prec.left($.identifier),
            prec.left($._reserved_identifier),
            alias(choice(...data_types), $.identifier),
            $.self,
            $.scoped_identifier,
            $.generic_function,
            $.tuple_expression,
            $.struct_expression,
            $.array_expression,
            $.field_access_expression,
            $.await_expression,
            prec(1, $.macro_invoc),
            $.unit_expression,
            $.break_expression,
            $.continue_expression,
            $.index_expression,
            $.metavariable,
            $.closure_expression,
            $.single_parenthesized_expression,
            $._expression_block
        ),

        scoped_identifier: $ => seq(
            field('path', optional(choice(
                $._path,
                $.bracket_type,
                alias($.generic_type_turbofish, $.generic_type)
            ))),
            '::',
            field('name', $.identifier)
        ),

        scoped_type_identifier: $ => seq(
            field('path', optional(choice(
                $._path,                                            // path
                alias($.generic_type_turbofish, $.generic_type),    // alias generic type with turbofish as generic type
                $.bracket_type,                                     // bracket type
                $.generic_type                                      // generic type
            ))),
            '::',
            field('name', $._type_identifier)
        ),

        type_cast_expression: $ => seq(
            field('value', $._expression),
            'as',
            field('type', $._type)
        ),

        call_expression: $ => prec(14, seq(
            field('function', $._expression),
            field('arguments', $.func_args)
        )),

        block: $ => seq(
            '{',
            repeat($._stm),
            optional($._expression),
            '}'
        ),

        _pattern: $ => choice(
            $._literal_pattern,
            alias(choice(...data_types), $.identifier),
            $.identifier,
            $.scoped_identifier,
            $.tuple_pattern,
            $.tuple_struct_pattern,
            $.struct_pattern,
            $.ref_pattern,
            $.mut_pattern,
            $.range_pattern,
            $.reference_pattern,
            $.capture_pattern,
            $.or_pattern,
            $.rest_field_pattern,
            $.slice_pattern,
            $.const_block,  // const block *
            '_'
        ),

        _literal: $ => choice(
            $.string_lit,
            $.raw_string_lit,
            $.char_lit,
            $.boolean_lit,
            $.integer_lit,
            $.float_lit
        ),

        integer_lit: $ => token(seq(
            choice(
                /[0-9][0-9_]*/,
                /0x[0-9a-fA-F_]+/,
                /0o[0-7_]+/,
                /0b[01_]+/
            ),
            optional(choice(...numeric_suffix))
        )),

        string_lit: $ => seq(
            alias(/b?"/, '"'),
            repeat(choice(
                $._char_escape,
                $._string_content
            )),
            token.immediate('"')
        ),

        _char_escape: $ => token(
            seq('\\', 
                choice(
                    /[^xu]/,
                    /x[0-9a-fA-F]{2}/,
                    /u[0-9a-fA-F]{4}/,
                    /u{[0-9a-fA-F]+}/
                )
            )
        ),

        _path: $ => choice(
            $.identifier,
            $.super,
            $.self,
            $.crate,
            $.scoped_identifier,
            alias(choice(...data_types), $.identifier),
            $.metavariable
        ),

        identifier: $ => token(seq(/(r#)?[a-zA-Z_][a-zA-Z0-9_]*/)),
        _type_identifier: $ => alias($.identifier, $._type_identifier),
        _reserved_identifier: $ => alias(choice('default','union'), $.identifier),
